k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app.kubernetes.io/name: test-release
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/name: test-release
  type: ClusterIP
status:
  loadBalancer: {}
